<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.config.ConfigFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_mode_selection"
        android:textSize="18sp"
        android:paddingBottom="8dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_enable_ble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_enable" />

    <RadioGroup
        android:id="@+id/radio_group_ble_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <RadioButton
            android:id="@+id/radio_role_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_role_none" />

        <RadioButton
            android:id="@+id/radio_role_peripheral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_role_peripheral" />

        <RadioButton
            android:id="@+id/radio_role_central"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_role_central" />
    </RadioGroup>

</LinearLayout>
